kubernetes-flux/blade/gateway-system/gateway-blade-internal/app/gateway.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/gateway_v1.json

apiVersion: "gateway.networking.k8s.io/v1"
kind: Gateway
metadata:
  name: blade-internal
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "10.0.2.30"
  listeners:
    - name: insecure
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: default
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: homelab-internal-tls
